# Rehoboam

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ANALYZE_CLEANUP_SUMMARY.md  AUTO_TRADING_GUIDE.md  AWS_DEPLOYMENT_2026.md  AWS_DEPLOYMENT_SUMMARY.md  BID_LOGIC_FIX_SUMMARY.md  BID_MANAGEMENT_FEATURES.md  BUGFIXES.md  CI_SETUP_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  DOCKER_GUIDE.md  Dockerfile  ENHANCED_ANALYSIS_GUIDE.md  IMPROVEMENTS.md  LEAGUE_COMPLIANCE.md  MY_BIDS_IMPLEMENTATION.md  Makefile  QUICKSTART.md  QUICKSTART_LAMBDA.md  README.md  SQUAD_EVALUATION_LOGIC.md  TEAM_VALUE_FIX_SUMMARY.md  TEST_RUN_SUMMARY_2025-11-10.md  THIS_WEEK_QUICKSTART.md  TRADE_OPTIMIZER_FIXES_SUMMARY.md  WEEKLY_BOT_GUIDE.md  analyze_squad_for_sell.py  check_player_value.py  compare_players.py  compare_stiller_vs_elkhannouss.py  debug_trades.py  decode_activities.py  deploy_lambda.sh  docker-compose.yml  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  trading-bot.yml
api/: __init__.py  auth.py  dependencies.py  main.py  models.py
api/routes/: __init__.py  (+6 more)
deploy/: AWS-SETUP-GUIDE.md  README-DEPLOYMENT.md  deploy-lambda-updated.sh  deploy-lambda.sh  deploy_azure.sh  lambda_handler.py  requirements-lambda.txt
docker/: crontab  entrypoint.sh
docs/: AUCTION_MONITORING.md  AUTO_PURCHASE_PRICES.md  DEBT_BASED_FLIPPING.md  DUAL_TRADING_STRATEGY.md  KICKBASE_API_REFERENCE.md  LEARNING_SYSTEM_PROPOSAL.md  MATCHUP_ANALYSIS.md  N_FOR_M_TRADING.md  SELL_ANALYSIS.md  SELL_STRATEGY.md  SQUAD_ANALYSIS_GUIDE.md  STRENGTH_OF_SCHEDULE.md  VALUE_BOUNDED_LEARNING.md
rehoboam/: __init__.py  activity_feed_learner.py  analyzer.py  api.py  auto_trader.py  azure_blob.py  backfill.py  bid_evaluator.py  bid_learner.py  bid_monitor.py  bidding_strategy.py  cli.py  compact_display.py  comparison_analyzer.py  config.py  enhanced_analyzer.py  expected_points.py  factor_weight_learner.py  formation.py  historical_tracker.py  kickbase_client.py  league_compliance.py  logging_setup.py  market_price_tracker.py  market_timing.py  matchup_analyzer.py  mv_backfill.py  opportunity_cost.py  portfolio_analyzer.py  profit_trader.py  replacement_evaluator.py  risk_analyzer.py  roster_analyzer.py  scenario_analyzer.py  scheduler.py  sell_timing_optimizer.py  squad_optimizer.py  telegram_notifier.py  trade_optimizer.py  trader.py  (+3 more)
scripts/: sync-azure-deps.sh
setup/: com.rehoboam.trading.plist  rehoboam.service
tests/: __init__.py  test_analyzer.py  test_api.py  test_auto_trader_trade_pairs.py  test_azure_blob.py  test_backfill.py  test_bid_state_db.py  test_config.py  test_ep_bidding.py  test_execution_safety.py  test_expected_points.py  test_flip_budget.py  test_league_rank_history.py  test_manager_profile_history.py  test_matchday_lineup_results.py  test_matchday_outcomes.py  test_matchday_reconciliation.py  test_matchup_analyzer.py  test_min_hold_and_emergency_fill.py  test_mv_backfill.py  test_player_mv_history.py  test_profit_dip_buying.py  test_profit_sell_phase.py  test_state_migration.py  test_team_value_history.py  test_trader.py  test_trend_service.py  test_wash_trade_guard.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
(+43 files in other folders)
