[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rehoboam"
version = "0.1.0"
description = "KICKBASE trading bot for automated player buying and selling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",  # HTTP client for API calls
    "typer>=0.9.0",
    "rich>=13.0.0",  # Beautiful terminal output
    "pydantic>=2.0.0",  # Configuration validation
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rehoboam = "rehoboam.cli:app"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
