[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rehoboam"
version = "0.1.0"
description = "KICKBASE trading bot for automated player buying and selling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",  # HTTP client for API calls
    "typer>=0.9.0",
    "rich>=13.0.0",  # Beautiful terminal output
    "pydantic>=2.0.0",  # Configuration validation
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    # Git hooks
    "pre-commit>=3.0.0",
    # Security
    "safety>=2.3.0",
    # Build
    "build>=1.0.0",
    # Type stubs
    "types-requests>=2.31.0",
]

[project.scripts]
rehoboam = "rehoboam.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rehoboam*"]
exclude = ["tests*", "setup*", "docs*", "docker*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we can revisit this)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used warning (we use asserts in tests)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = true
